<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".MainActivity">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="100dp"
           android:orientation="horizontal">

           <Button
               android:id="@+id/shufflebtn"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:contentDescription="@string/shuffle_btn"
               style="@style/Widget.AppCompat.Button.Borderless"
               android:drawableTop="@drawable/shuffle_icon"
               android:text="@string/shuffle_btn"
               android:textColor="@color/black"
               android:textAllCaps="false">

           </Button>
           <Button
               android:id="@+id/favouritebtn"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:contentDescription="@string/favourite_btn"
               style="@style/Widget.AppCompat.Button.Borderless"
               android:drawableTop="@drawable/favorite_icon"
               android:text="@string/favourite_btn"
               android:textColor="@color/black"
               android:textAllCaps="false">

           </Button>
           <Button
               android:id="@+id/playlistbtn"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:contentDescription="@string/playlist_btn"
               style="@style/Widget.AppCompat.Button.Borderless"
               android:drawableTop="@drawable/playlist_icon"
               android:text="@string/playlist_btn"
               android:textColor="@color/black"
               android:textAllCaps="false">

           </Button>

       </LinearLayout>

       <TextView
           android:id="@+id/totalSongs"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/total_songs"
           android:textColor="@color/black"
           android:layout_margin="10dp">

       </TextView>

       <androidx.recyclerview.widget.RecyclerView
           android:id="@+id/musicRV"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           >


       </androidx.recyclerview.widget.RecyclerView>

   </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/navigation_menu"/>

</androidx.drawerlayout.widget.DrawerLayout>